--- a/01-Papilio/大斑鳳蝶(黃邊鳳蝶).html
+++ b/01-Papilio/大斑鳳蝶(黃邊鳳蝶).html
@@ -270,10 +270,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大斑鳳蝶(黃邊鳳蝶)/大斑鳳蝶(黃邊鳳蝶)-4齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/大斑鳳蝶(黃邊鳳蝶)/大斑鳳蝶(黃邊鳳蝶)-4齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">四齡幼蟲正面</p>
+                <p class="card-text">四齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -284,10 +284,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大斑鳳蝶(黃邊鳳蝶)/大斑鳳蝶(黃邊鳳蝶)-終齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/大斑鳳蝶(黃邊鳳蝶)/大斑鳳蝶(黃邊鳳蝶)-終齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">終齡幼蟲正面</p>
+                <p class="card-text">終齡幼蟲背面</p>
             </div>
         </div>
         
