--- a/01-Papilio/大白紋鳳蝶(台灣白紋鳳蝶).html
+++ b/01-Papilio/大白紋鳳蝶(台灣白紋鳳蝶).html
@@ -260,7 +260,7 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-交尾正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-交尾背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">交尾-上雄(♂)下雌(♀)</p>
             </div>
@@ -305,9 +305,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-終齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-終齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">終齡幼蟲正面</p>
+                <p class="card-text">終齡幼蟲背面</p>
             </div>            
         </div>
         <!-- 第3列 -->
@@ -326,9 +326,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-綠色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-綠色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">綠色蛹正面</p>
+                <p class="card-text">綠色蛹背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -341,9 +341,9 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/大白紋鳳蝶(台灣白紋鳳蝶)/大白紋鳳蝶(台灣白紋鳳蝶)-雄蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)正面-後翅表的有4大1小的白斑</p>
+                <p class="card-text">雄蝶(♂)背面-後翅表的有4大1小的白斑</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
