--- a/01-Papilio/大鳳蝶.html
+++ b/01-Papilio/大鳳蝶.html
@@ -302,10 +302,10 @@
       <div class="col-md-3">
         <div class="card">
           <img
-            src="img/大鳳蝶/大鳳蝶-綠色蛹正面.jpg"
+            src="img/大鳳蝶/大鳳蝶-綠色蛹背面.jpg"
             class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">綠色蛹正面</p>
+        <p class="card-text">綠色蛹背面</p>
       </div>
     </div>
     <!-- 第3列 -->
@@ -318,9 +318,9 @@
       </div>    
       <div class="col-md-3">
         <div class="card">
-          <img src="img/大鳳蝶/大鳳蝶-褐色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/大鳳蝶/大鳳蝶-褐色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">褐色蛹正面</p>
+        <p class="card-text">褐色蛹背面</p>
       </div>   
       <div class="col-md-3">
         <div class="card">
@@ -330,9 +330,9 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="img/大鳳蝶/大鳳蝶-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/大鳳蝶/大鳳蝶-雄蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">雄蝶(♂)正面</p>
+        <p class="card-text">雄蝶(♂)背面</p>
       </div> 
     </div>
     <!-- 第4列 -->
@@ -345,9 +345,9 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="img/大鳳蝶/大鳳蝶-無尾型雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/大鳳蝶/大鳳蝶-無尾型雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">無尾型雌蝶(♀)正面</p>
+        <p class="card-text">無尾型雌蝶(♀)背面</p>
       </div>    
       <div class="col-md-3">
         <div class="card">
@@ -357,9 +357,9 @@
       </div>    
       <div class="col-md-3">
         <div class="card">
-          <img src="img/大鳳蝶/大鳳蝶-有尾型雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/大鳳蝶/大鳳蝶-有尾型雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">有尾型雌蝶(♀)正面</p>
+        <p class="card-text">有尾型雌蝶(♀)背面</p>
       </div>
     </div>
     
