--- a/01-Papilio/柑橘鳳蝶.html
+++ b/01-Papilio/柑橘鳳蝶.html
@@ -283,9 +283,9 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-2齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-2齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">二齡幼蟲正面</p>
+                <p class="card-text">二齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -295,9 +295,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-3齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-3齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">三齡幼蟲正面</p>
+                <p class="card-text">三齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -310,9 +310,9 @@
         <div class="row g-2">
             <div class="col-md-3">                
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-4齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-4齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                     </div>
-                <p class="card-text">四齡幼蟲正面</p>
+                <p class="card-text">四齡幼蟲背面</p>
                 </div>
             <div class="col-md-3">
                 <div class="card">
@@ -323,9 +323,9 @@
 
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-終齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-終齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">終齡幼蟲正面</p>
+                <p class="card-text">終齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -344,9 +344,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-綠色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-綠色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">綠色蛹正面</p>
+                <p class="card-text">綠色蛹背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -356,9 +356,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-褐色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-褐色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">褐色蛹正面</p>
+                <p class="card-text">褐色蛹背面</p>
             </div>            
         </div>
 
@@ -372,7 +372,7 @@
             </div>            
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-訪金露花正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/柑橘鳳蝶/柑橘鳳蝶-訪金露花背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">雌蝶(♀)訪金露花</p>
             </div>            
