--- a/01-Papilio/白紋鳳蝶.html
+++ b/01-Papilio/白紋鳳蝶.html
@@ -263,17 +263,17 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/白紋鳳蝶/白紋鳳蝶-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/白紋鳳蝶/白紋鳳蝶-雄蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)正面</p>
+                <p class="card-text">雄蝶(♂)背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/白紋鳳蝶/白紋鳳蝶-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/白紋鳳蝶/白紋鳳蝶-雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面</p>
+                <p class="card-text">雌蝶(♀)背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
