--- a/01-Papilio/花鳳蝶(無尾鳳蝶).html
+++ b/01-Papilio/花鳳蝶(無尾鳳蝶).html
@@ -327,9 +327,9 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-終齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-終齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">終齡幼蟲正面</p>
+                <p class="card-text">終齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -356,16 +356,16 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-綠色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-綠色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">綠色蛹正面</p>
+                <p class="card-text">綠色蛹背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-雄蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)正面</p>
+                <p class="card-text">雄蝶(♂)背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -376,10 +376,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/花鳳蝶(無尾鳳蝶)/花鳳蝶(無尾鳳蝶)-雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面</p>
+                <p class="card-text">雌蝶(♀)背面</p>
             </div>            
         </div>
         <!-- 第5列 -->
