--- a/01-Papilio/青鳳蝶(青帶鳳蝶).html
+++ b/01-Papilio/青鳳蝶(青帶鳳蝶).html
@@ -240,18 +240,15 @@
                 <h1>青鳳蝶(青帶鳳蝶)</h1>
                 <p class="ScientificName">(Graphium sarpedon connectens)</p>
                 <h4 class="subTitle">幼生期</h4>
-                <p>青鳳蝶(青帶鳳蝶)的卵為淡黃綠色、圓球形，直徑約1.2mm。
+                <p>青鳳蝶(青帶鳳蝶)的卵為淡黃綠色、圓球形，表面光滑，直徑約1.2mm。
                     一齡幼蟲體色深褐色；
-                    三~四齡幼蟲體色淡褐綠色，頭胸側邊有3對藍黑色尖刺狀突起。臭角為淡黃色
-
-                    終齡幼蟲體色，後胸體背有一條黃色橫紋，頭胸左右側各有3枚藍色光澤突棘，腹端有一對叉狀突起，化蛹前會四處爬行，蛹為縊蛹(帶蛹)，有綠、褐色兩型，體背有4條黃色縱紋。
-
-                    外觀像捲曲的葉子，冬季以蛹越冬。
+                    三~四齡幼蟲體色淡褐綠色，頭胸側邊有3對藍黑色尖刺狀突起。臭角為淡黃色。
+                    終齡幼蟲體色，後胸背有一條黃色稜線，頭胸左右兩側各有3對突棘，腹端有一對叉狀突起。蛹為縊蛹(帶蛹)，有綠、褐色兩型，體背有4條黃色縱紋。
+                    蛹的外觀像捲曲的葉子，冬季以蛹越冬。
                 </p>
                 <h4 class="subTitle">成蟲</h4>
-                <p>青鳳蝶(青帶鳳蝶)展翅50~60mm。身體暗褐色，腹面有灰白毛。
-                    後翅外緣呈波浪狀。翅面呈暗褐色，翅面中央有一列半透明青色帶紋，後翅外緣另有一列同色弧形短紋，另外在翅後半部有許多紅色細紋。雄蝶後翅內緣褶內生有白色長毛。
-                    後翅近外緣有眉狀斑紋排列，尾突不明顯，翅腹面也有青帶斑紋但後翅近肛角區域具紅斑。
+                <p>青鳳蝶(青帶鳳蝶)展翅50~60mm。雌雄蝶在翅膀的斑紋上幾乎沒有差異，翅面暗褐色，腹面有灰白毛。
+                    後翅外緣呈波浪狀。翅背、翅腹面中央有一列青色帶紋，後翅外緣有一列藍色弦月形短紋，另外在翅後半部有許多紅色細紋。雄蝶後翅內緣褶內生有白色長毛，，此為雄蝶的性標。尾突不明顯。後翅近肛角區域具紅斑。
                     飛行快速，喜歡訪花吸蜜，雄蝶常群聚於濕地吸水。
                 </p>
                 <h4 class="subTitle">食草</h4>
@@ -271,6 +268,12 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-精斑.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">精斑</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
                     <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-1齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">一齡幼蟲</p>
@@ -280,48 +283,48 @@
                     <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-2齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">二齡幼蟲側面</p>
-            </div>
+            </div>            
+        </div>
+        <!-- 第2列 -->
+        <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
                     <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-2齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
                 <p class="card-text">二齡幼蟲正面</p>
             </div>
-        </div>
-        <!-- 第2列 -->
-        <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-3齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-3齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">三齡幼蟲側面</p>
+                <p class="card-text">三齡幼蟲</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-3齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-4齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">三齡幼蟲正面</p>
+                <p class="card-text">四齡幼蟲側面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-4齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-4齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">四齡幼蟲</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-終齡幼蟲.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">終齡幼蟲</p>
-            </div>
+                <p class="card-text">四齡幼蟲背面</p>
+            </div>            
         </div>
         <!-- 第3列 -->
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-橘色臭角.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-終齡幼蟲側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">終齡幼蟲伸出橘黃色臭角</p>
+                <p class="card-text">終齡幼蟲側面</p>
+            </div>
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-終齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                </div>
+                <p class="card-text">終齡幼蟲背面</p>
             </div>
 
             <div class="col-md-3">
@@ -332,73 +335,59 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-蛹側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-綠色蛹側面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">蛹側面</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">蛹正面</p>
-            </div>
+                <p class="card-text">綠色蛹側面</p>
+            </div>            
         </div>
         <!-- 第4列 -->
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雄蝶腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-綠色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)腹面</p>
+                <p class="card-text">綠色蛹背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雄蝶的發香鱗-腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-剛羽化的雌蝶.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶腹面(♂)長條形的發香鱗</p>
+                <p class="card-text">剛羽化的雌蝶(♀)</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雄蝶的發香鱗-正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶的交配孔.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶正面(♂)長條形的發香鱗</p>
+                <p class="card-text">雌蝶(♀)的交配孔</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
                     <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶腹面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">有雌蝶(♀)腹面</p>
-            </div>
+                <p class="card-text">雌蝶(♀)腹面</p>
+            </div>            
         </div>
 
         <!-- 第5列 -->
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-成蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面</p>
+                <p class="card-text">成蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶正面後翅的A形紋.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雄蝶吸水.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面後翅的A形紋</p>
-            </div>
+                <p class="card-text">雄蝶(♂)吸水</p>
+            </div>            
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶訪馬纓丹.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-訪馬纓丹.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)訪馬纓丹</p>
-            </div>
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="img/青鳳蝶(青帶鳳蝶)/青鳳蝶(青帶鳳蝶)-雌蝶訪繁星花.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
-                </div>
-                <p class="card-text">雌蝶(♀)訪繁星花</p>
-            </div>
-
-
+                <p class="card-text">訪馬纓丹</p>
+            </div> 
         </div>
         <br>
 
