--- a/01-Papilio/黃星斑鳳蝶(黃星鳳蝶).html
+++ b/01-Papilio/黃星斑鳳蝶(黃星鳳蝶).html
@@ -364,10 +364,10 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃星斑鳳蝶(黃星鳳蝶)/黃星斑鳳蝶(黃星鳳蝶)-雄蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
+                    <img src="img/黃星斑鳳蝶(黃星鳳蝶)/黃星斑鳳蝶(黃星鳳蝶)-雄蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片"
                         data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶(♂)正面</p>
+                <p class="card-text">雄蝶(♂)背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
