--- a/01-Papilio/黃裳鳳蝶.html
+++ b/01-Papilio/黃裳鳳蝶.html
@@ -247,8 +247,8 @@
                 </p>
                 <h4 class="subTitle">成蟲</h4>
                 <p>黃裳鳳蝶屬於台灣特有亞種，展翅約110~130mm，是台灣本島蝴蝶種類中體型最大者。
-                    雄蝶後翅不論是正面、腹面都有大片金黃色斑紋，翅膀夾層中有發香鱗，用來吸引母蝶。
-                    雌蝶黑色斑紋較為發達，而且體型較大，後翅腹面、正面都有數個「A」字紋。喜歡訪花吸蜜。
+                    雄蝶後翅不論是背面、腹面都有大片金黃色斑紋，翅膀夾層中有發香鱗，用來吸引母蝶。
+                    雌蝶黑色斑紋較為發達，而且體型較大，後翅腹面、背面都有數個「A」字紋。喜歡訪花吸蜜。
                 </p>
                 <h4 class="subTitle">食草</h4>
                 <span>幼蟲以馬兜鈴科的港口馬兜鈴、臺灣(異葉)馬兜鈴、瓜葉馬兜鈴、蜂窩馬兜鈴......等馬兜鈴科植物為食草。                    
@@ -279,9 +279,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-2齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-2齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">二齡幼蟲正面</p>
+                <p class="card-text">二齡幼蟲背面</p>
             </div>
         </div>
         <!-- 第2列 -->
@@ -294,9 +294,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-3齡幼蟲正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-3齡幼蟲背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">三齡幼蟲正面</p>
+                <p class="card-text">三齡幼蟲背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -334,9 +334,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">蛹正面</p>
+                <p class="card-text">蛹背面</p>
             </div>            
         </div>
         <!-- 第4列 -->
@@ -355,9 +355,9 @@
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶的發香鱗-正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雄蝶的發香鱗-背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雄蝶正面(♂)長條形的發香鱗</p>
+                <p class="card-text">雄蝶背面(♂)長條形的發香鱗</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
@@ -371,15 +371,15 @@
         <div class="row g-2">
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面</p>
+                <p class="card-text">雌蝶(♀)背面</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
-                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶正面後翅的A形紋.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+                    <img src="img/黃裳鳳蝶/黃裳鳳蝶-雌蝶背面後翅的A形紋.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
                 </div>
-                <p class="card-text">雌蝶(♀)正面後翅的A形紋</p>
+                <p class="card-text">雌蝶(♀)背面後翅的A形紋</p>
             </div>
             <div class="col-md-3">
                 <div class="card">
