--- a/01-Papilio/黑鳳蝶.html
+++ b/01-Papilio/黑鳳蝶.html
@@ -300,9 +300,9 @@
     <div class="row g-2">
       <div class="col-md-3">
         <div class="card">
-          <img src="img/黑鳳蝶/黑鳳蝶-綠色蛹正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/黑鳳蝶/黑鳳蝶-綠色蛹背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">黑鳳蝶綠色蛹正面</p>
+        <p class="card-text">黑鳳蝶綠色蛹背面</p>
       </div>
       <div class="col-md-3">
         <div class="card">
@@ -327,9 +327,9 @@
     <div class="row g-2">
       <div class="col-md-3">
         <div class="card">
-          <img src="img/黑鳳蝶/黑鳳蝶-正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/黑鳳蝶/黑鳳蝶-背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
-        <p class="card-text">雄蝶(♂)正面</p>
+        <p class="card-text">雄蝶(♂)背面</p>
       </div>
       <div class="col-md-3">
         <div class="card">
@@ -339,7 +339,7 @@
       </div>
       <div class="col-md-3">
         <div class="card">
-          <img src="img/黑鳳蝶/黑鳳蝶-雌蝶正面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
+          <img src="img/黑鳳蝶/黑鳳蝶-雌蝶背面.jpg" class="card-img-top" title="點擊圖片可以縮放圖片" data-action="zoom">
         </div>
         <p class="card-text">雌蝶(♀)肛角橘色環狀斑紋明顯</p>
       </div>      
